--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,6 +6,7 @@
     "login": "Login",
     "logout": "Logout",
     "email": "Email",
+    "username": "username",
     "password": "Password",
     "emailRequired": "Email is required",
     "passwordRequired": "Password is required",
